--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://royartarian.com/files/ra.jpg"
+      href="favicon.png"
     />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
